--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -21,9 +22,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.1'
     // Added for AdMob
+    compile project(":jokegeneratorlibrary")
+    compile project(":jokedisplay")
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.3.0'
-    compile project (":jokegeneratorlibrary")
-    compile project (":jokedisplay")
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
