--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,14 +18,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors{
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":jokegeneratorlibrary")
     compile project(":jokedisplay")
-    compile 'com.android.support:appcompat-v7:23.1.1'
     // Added for AdMob
-    compile 'com.google.android.gms:play-services:8.3.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.android.support:design:23.1.1'
 }
