Added paid flavor with noads

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(":jokegeneratorlibrary")
     compile project(":jokedisplay")
-    // Added for AdMob
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
+    //Ad for only free version
+    freeCompile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.android.support:design:23.1.1'
 }
